--- a/front/src/components/builds/Builds.scss
+++ b/front/src/components/builds/Builds.scss
@@ -23,10 +23,10 @@
 	    height: 10%;
 	    @media screen and (min-width: $screen-md) {
 	        margin-bottom: 20px;
-	        height: 15%;
+	        height: 20%;
 	    }
 	}
 	.sm-builds-profil {
-		height: 85%;
+		height: 80%;
 	}
 }
